--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 
         <img id="banner" src="banner.jpg">
         <div class="principal">
-            <h2 class="titulo-centralizado">Digite seu nome completo</h2>
+            <h2 class="titulo-centralizado">marina drancka</h2>
      
-            <p> <strong>Componentes curriculares afins</strong> Quais disciplinas você tem mais afinidade</p>
+            <p> <strong>Componentes curriculares afins</strong> arte..portuguễs...projeto de vida</p>
 
-            <p id="missao"><em>Gostos musicais <strong>Rock, Pop, Sertanejo, Tradicionalista</strong>.</em></p>
+            <p id="missao"><em>Gostos musicais <strong>kpop</strong>.</em></p>
 
-            <p>Diga um pouco sobre as músicas preferidas e em quais momentos</p>
+            <p>ouço por que me sinto muma deles ser kpopper e muito bom bts nao e so uma banda as letras sao o que pulsam as batidas do meu coraçao</p>
         </div>
 
         <div class="beneficios">
             <h3 class="titulo-centralizado">Minhas qualidades</h3>
 
             <ul>
-                <li class="itens">......</li>
-                <li class="itens">.........</li>
-                <li class="itens">..........</li>
-                <li class="itens">..........</li>
+                <li class="itens">.gosto de fazer artesanato e pintar quadros </li>
+                <li class="itens">escrevo poemas</li>
+                <li class="itens">gosto de romantizarv a vida</li>
+                <li class="itens">gosto de fazer maquiagens artisticas</li>
             </ul>
 
             <img src="beneficios.jpg" class="imagembeneficios">
