--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1 class="titulo-principal">Um pouco sobre mim</h1>
         </header>
 
-        <img id="banner" src="banner.jpg">
+        <img id="banner" src="imagem1.png">
         <div class="principal">
             <h2 class="titulo-centralizado">marina drancka</h2>
      
@@ -32,7 +32,7 @@
                 <li class="itens">gosto de fazer maquiagens artisticas</li>
             </ul>
 
-            <img src="beneficios.jpg" class="imagembeneficios">
+            <img src="imagem2.png" class="imagembeneficios">
             <! tag para inserir imagem nas páginas web ->
         </div>
     </body>
