--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <img id="banner" src="imagem1.png">
         <div class="principal">
-            <h2 class="titulo-centralizado">marina drancka</h2>
+            ><h2 class="titulo-centralizado">marina drancka</h2
      
             <p> <strong>Componentes curriculares afins</strong> arte..portuguễs...projeto de vida</p>
 
@@ -34,6 +34,10 @@
 
             <img src="imagem2.png" class="imagembeneficios">
             <! tag para inserir imagem nas páginas web ->
+
+            <h1 class="titulo-principal">banda preferida</h1>
+            <h2 class="titulo-centralizado">BTS</h2
+
         </div>
     </body>
 </html>
