--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1 class="titulo-principal">banda preferida</h1>
             <h2 class="titulo-centralizado">BTS</h2
 
-            <img src="imagem2.png" class="imagembeneficios">
+            <img src="bts.jpeg" class="imagembeneficios">
 
         </div>
     </body>
