--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
             <h1 class="titulo-principal">banda preferida</h1>
             <h2 class="titulo-centralizado">BTS</h2
+                <img src=".png" class="imagembeneficios">
+                
 
-            <img src="bts.jpeg" class="imagembeneficios">
+        
 
         </div>
     </body>
